--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
@@ -17,8 +17,10 @@
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
     "@react-navigation/stack": "^7.1.2",
+    "axios": "^1.8.4",
     "expo": "~52.0.37",
     "expo-font": "~13.0.4",
+    "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "i18next": "^24.2.2",
     "i18next-http-backend": "^3.0.2",
@@ -26,6 +28,7 @@
     "react": "18.3.1",
     "react-i18next": "^15.4.1",
     "react-native": "0.76.7",
+    "react-native-gesture-bottom-sheet": "^1.1.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-magnus": "^1.0.63",
     "react-native-maps": "1.18.0",
@@ -33,8 +36,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-swiper": "^1.6.0",
-    "expo-splash-screen": "~0.29.22"
+    "react-native-swiper": "^1.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
