--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo-google-fonts/cairo": "^0.2.3",
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/vector-icons": "^14.0.4",
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/geolocation": "^3.4.0",
     "@react-native-community/slider": "^4.5.6",
     "@react-navigation/native": "^7.0.15",
@@ -28,6 +29,8 @@
     "react": "18.3.1",
     "react-i18next": "^15.4.1",
     "react-native": "0.76.7",
+    "react-native-animated-loader": "^1.0.0",
+    "react-native-device-info": "^14.0.4",
     "react-native-gesture-bottom-sheet": "^1.1.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-magnus": "^1.0.63",
@@ -36,7 +39,8 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
-    "react-native-swiper": "^1.6.0"
+    "react-native-swiper": "^1.6.0",
+    "expo-device": "~7.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
