--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@react-navigation/stack": "^7.1.2",
     "axios": "^1.8.4",
     "expo": "~52.0.37",
+    "expo-device": "~7.0.3",
     "expo-font": "~13.0.4",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
@@ -40,7 +41,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-swiper": "^1.6.0",
-    "expo-device": "~7.0.3"
+    "react-native-toast-message": "^2.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
