--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@expo-google-fonts/cairo": "^0.2.3",
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/vector-icons": "^14.0.4",
+    "@gorhom/bottom-sheet": "^4.6.4",
     "@react-native-async-storage/async-storage": "^2.1.2",
     "@react-native-community/geolocation": "^3.4.0",
     "@react-native-community/slider": "^4.5.6",
@@ -20,7 +21,6 @@
     "@react-navigation/stack": "^7.1.2",
     "axios": "^1.8.4",
     "expo": "~52.0.37",
-    "expo-device": "~7.0.3",
     "expo-font": "~13.0.4",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
@@ -31,14 +31,12 @@
     "react-i18next": "^15.4.1",
     "react-native": "0.76.7",
     "react-native-animated-loader": "^1.0.0",
-    "react-native-device-info": "^14.0.4",
-    "react-native-gesture-bottom-sheet": "^1.1.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-magnus": "^1.0.63",
     "react-native-maps": "1.18.0",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-swiper": "^1.6.0",
     "react-native-toast-message": "^2.2.1"
