--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "myq",
     "slug": "myq",
-    "version": "1.0.0",
+    "version": "1.0.2",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -14,7 +14,10 @@
     },
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.mohamedesmail9225.myq"
+      "bundleIdentifier": "com.mohamedesmail9225.myq",
+      "infoPlist": {
+    "NSLocationWhenInUseUsageDescription": "We need your location to show nearby places on the map."
+  }
     },
     "android": {
       "adaptiveIcon": {
@@ -22,7 +25,7 @@
         "backgroundColor": "#ffffff"
       },
       "package": "com.mohamedesmail9225.myq",
-      "versionCode": 1,
+      "versionCode": 2,
       "config": {
         "googleMaps": {
           "apiKey": "AIzaSyA74gOioKDIY9AlPHe3eyu4yTSvyAN8RMM"
@@ -34,6 +37,11 @@
     },
     "plugins": [
       "expo-font"
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "089dbb75-bba0-4aec-9334-af18f948e64d"
+      }
+    }
   }
 }
