--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
     "@react-navigation/stack": "^7.1.2",
+    "@reduxjs/toolkit": "^2.7.0",
     "axios": "^1.8.4",
     "expo": "^52.0.46",
+    "expo-dev-client": "~5.0.20",
     "expo-font": "~13.0.4",
     "expo-location": "~18.0.10",
     "expo-maps": "^0.7.3",
@@ -41,7 +43,9 @@
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-swiper": "^1.6.0",
-    "react-native-toast-message": "^2.2.1"
+    "react-native-toast-message": "^2.2.1",
+    "react-redux": "^9.2.0",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
