--- a/package.json
+++ b/package.json
@@ -11,38 +11,38 @@
   "dependencies": {
     "@expo-google-fonts/cairo": "^0.2.3",
     "@expo-google-fonts/poppins": "^0.2.3",
-    "@expo/vector-icons": "^14.0.4",
+    "@expo/vector-icons": "^14.1.0",
     "@gorhom/bottom-sheet": "^4.6.4",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/geolocation": "^3.4.0",
-    "@react-native-community/slider": "4.5.5",
+    "@react-native-community/slider": "4.5.6",
+    "@react-navigation/drawer": "^7.3.10",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
     "@react-navigation/stack": "^7.1.2",
     "@reduxjs/toolkit": "^2.7.0",
     "axios": "^1.8.4",
-    "expo": "^52.0.46",
-    "expo-dev-client": "~5.0.20",
-    "expo-font": "~13.0.4",
-    "expo-location": "~18.0.10",
-    "expo-maps": "^0.7.3",
-    "expo-splash-screen": "~0.29.24",
-    "expo-status-bar": "~2.0.1",
+    "expo": "^53.0.6",
+    "expo-font": "~13.3.1",
+    "expo-location": "~18.1.4",
+    "expo-maps": "~0.9.8",
+    "expo-splash-screen": "~0.30.8",
+    "expo-status-bar": "~2.2.3",
     "geolib": "^3.3.4",
     "i18next": "^24.2.2",
     "i18next-http-backend": "^3.0.2",
     "install": "^0.13.0",
-    "react": "18.3.1",
+    "react": "19.0.0",
     "react-i18next": "^15.4.1",
-    "react-native": "0.76.9",
+    "react-native": "0.79.2",
     "react-native-animated-loader": "^1.0.0",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "~2.25.0",
     "react-native-magnus": "^1.0.63",
-    "react-native-maps": "1.18.0",
+    "react-native-maps": "1.20.1",
     "react-native-modal": "^13.0.1",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^4.12.0",
-    "react-native-screens": "~4.4.0",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.10.0",
     "react-native-swiper": "^1.6.0",
     "react-native-toast-message": "^2.2.1",
     "react-redux": "^9.2.0",
