--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "@react-navigation/stack": "^7.1.2",
     "@reduxjs/toolkit": "^2.7.0",
     "axios": "^1.8.4",
-    "expo": "^53.0.6",
+    "expo": "^53.0.9",
     "expo-font": "~13.3.1",
     "expo-location": "~18.1.4",
-    "expo-maps": "~0.9.8",
+    "expo-maps": "~0.9.9",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
     "geolib": "^3.3.4",
@@ -36,7 +36,7 @@
     "react-i18next": "^15.4.1",
     "react-native": "0.79.2",
     "react-native-animated-loader": "^1.0.0",
-    "react-native-gesture-handler": "~2.25.0",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-magnus": "^1.0.63",
     "react-native-maps": "1.20.1",
     "react-native-modal": "^13.0.1",
@@ -47,8 +47,7 @@
     "react-native-swiper": "^1.6.0",
     "react-native-toast-message": "^2.2.1",
     "react-redux": "^9.2.0",
-    "redux-persist": "^6.0.0",
-    "rn-swipe-button": "^3.0.1"
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
