--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/geolocation": "^3.4.0",
     "@react-native-community/slider": "4.5.6",
-    "@react-navigation/drawer": "^7.3.10",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
     "@react-navigation/stack": "^7.1.2",
@@ -28,6 +27,7 @@
     "expo-maps": "~0.9.9",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
+    "formik": "^2.4.6",
     "geolib": "^3.3.4",
     "i18next": "^24.2.2",
     "i18next-http-backend": "^3.0.2",
@@ -36,7 +36,7 @@
     "react-i18next": "^15.4.1",
     "react-native": "0.79.2",
     "react-native-animated-loader": "^1.0.0",
-    "react-native-gesture-handler": "~2.24.0",
+    "react-native-gesture-handler": "~2.25.0",
     "react-native-magnus": "^1.0.63",
     "react-native-maps": "1.20.1",
     "react-native-modal": "^13.0.1",
@@ -47,7 +47,8 @@
     "react-native-swiper": "^1.6.0",
     "react-native-toast-message": "^2.2.1",
     "react-redux": "^9.2.0",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
