--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "expo": {
     "name": "Q me",
     "slug": "myq",
-    "version": "1.0.9",
+    "version": "1.0.13",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
@@ -15,13 +15,13 @@
     "ios": {
       "supportsTablet": true,
       "bundleIdentifier": "com.mohamedesmail9225.myq",
-      "buildNumber": "1.0.9",
+      "buildNumber": "1.0.13",
       "config": {
         "googleMapsApiKey": "AIzaSyA74gOioKDIY9AlPHe3eyu4yTSvyAN8RMM"
       },
       "infoPlist": {
-        "NSLocationWhenInUseUsageDescription": "We need your location to show nearby places on the map.",
-        "NSLocationAlwaysAndWhenInUseUsageDescription": "We use your location even when the app is in the background to provide a continuous and personalized experience.",
+        "NSLocationWhenInUseUsageDescription": "We use your location to display service providers and queue points near you on the map so you can easily book or navigate to them.",
+        "NSLocationAlwaysAndWhenInUseUsageDescription": "Your location is used to send you real-time updates and reminders about your queue even if the app is running in the background.",
         "ITSAppUsesNonExemptEncryption": false
       }
     },
@@ -31,7 +31,7 @@
         "backgroundColor": "#ffffff"
       },
       "package": "com.mohamedesmail9225.myq",
-      "versionCode": 9,
+      "versionCode": 13,
       "config": {
         "googleMaps": {
           "apiKey": "AIzaSyA74gOioKDIY9AlPHe3eyu4yTSvyAN8RMM"
