--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "axios": "^1.8.4",
     "expo": "^53.0.9",
     "expo-font": "~13.3.1",
-    "expo-location": "~18.1.4",
-    "expo-maps": "~0.9.9",
+    "expo-location": "~18.1.5",
+    "expo-maps": "~0.10.0",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
     "formik": "^2.4.6",
@@ -36,11 +36,12 @@
     "react-i18next": "^15.4.1",
     "react-native": "0.79.2",
     "react-native-animated-loader": "^1.0.0",
-    "react-native-gesture-handler": "~2.25.0",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-magnus": "^1.0.63",
     "react-native-maps": "1.20.1",
-    "react-native-modal": "^13.0.1",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-reanimated": "~3.17.4",
+    "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-swipe-list-view": "^3.2.9",
