--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "19.0.0",
     "react-i18next": "^15.4.1",
     "react-native": "0.79.2",
+    "react-native-animatable": "^1.4.0",
     "react-native-animated-loader": "^1.0.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-magnus": "^1.0.63",
@@ -47,6 +48,7 @@
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-swiper": "^1.6.0",
     "react-native-toast-message": "^2.2.1",
+    "react-native-webview": "^13.13.5",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
     "yup": "^1.6.1"
