--- a/package.json
+++ b/package.json
@@ -15,17 +15,16 @@
     "@gorhom/bottom-sheet": "^4.6.4",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/geolocation": "^3.4.0",
-    "@react-native-community/slider": "4.5.6",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/native-stack": "^7.2.1",
     "@react-navigation/stack": "^7.1.2",
     "@reduxjs/toolkit": "^2.7.0",
     "axios": "^1.8.4",
-    "expo": "^53.0.9",
+    "expo": "^53.0.11",
     "expo-font": "~13.3.1",
     "expo-location": "~18.1.5",
     "expo-maps": "~0.10.0",
-    "expo-splash-screen": "~0.30.8",
+    "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
     "formik": "^2.4.6",
     "geolib": "^3.3.4",
@@ -34,9 +33,8 @@
     "install": "^0.13.0",
     "react": "19.0.0",
     "react-i18next": "^15.4.1",
-    "react-native": "0.79.2",
+    "react-native": "0.79.3",
     "react-native-animatable": "^1.4.0",
-    "react-native-animated-loader": "^1.0.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-magnus": "^1.0.63",
     "react-native-maps": "1.20.1",
@@ -44,13 +42,12 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-reanimated-carousel": "^4.0.2",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-screens": "~4.11.1",
     "react-native-swipe-list-view": "^3.2.9",
-    "react-native-swiper": "^1.6.0",
-    "react-native-toast-message": "^2.2.1",
     "react-native-webview": "^13.13.5",
     "react-redux": "^9.2.0",
     "redux-persist": "^6.0.0",
+    "toastify-react-native": "^7.2.0",
     "yup": "^1.6.1"
   },
   "devDependencies": {
